# VUT-FIT-PGR-RT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/models/chess/board2/: Board.mtl  Board.xml
res/models/chess/board3/: Board.mtl
res/models/chess/set1/chess-demo/source/Unity2Skfb/: Unity2Skfb.gltf
res/shaders/: basicFragmentShader.frag  basicFragmentShader.glsl  basicMaterial.glsl  basicVertexShader.glsl  buffers.glsl  buffersWavefront.glsl  bvhTraversal.glsl  computeShader.comp  computeShader.glsl  defines.glsl  extend.glsl  extensionRayCast.glsl  intersections.glsl  logic.glsl  newPath.glsl  rayGen.glsl  rayTracing.glsl  reset.glsl  shade.glsl  shadowRayCast.glsl  stageExtensionRayCast.glsl  stageLogic.glsl  stageMaterial.glsl  stageNewPath.glsl  stageResetRender.glsl  stageShadowRayCast.glsl  structures.glsl  structuresWavefront.glsl  utils.glsl
res/shaders/materials/: bxdf.glsl  diffuse.glsl  emissive.glsl  idealDielectric.glsl  idealReflection.glsl
src/: Application.cpp  Application.h  RayTracedChess.cpp  RayTracedChess.h  RenderInfo.cpp  RenderInfo.h  main.cpp
src/Chess/: Board.cpp  Board.h  Chess.cpp  Chess.h  Knight.h  Piece.cpp  Piece.h  Rook.h
src/RayTracing/: Camera.cpp  Camera.h  Ray.cpp  Ray.h  RayGenKernel.cpp  RayGenKernel.h  Scene.cpp  Scene.h
src/RayTracing/Geometry/: Geometry.h
src/RayTracing/Geometry/private/: Cylinder.cpp  Cylinder.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Scene/: Camera.cpp  Scene.cpp  Scene.h
src/Scene/Geometry/: Geometry.h  Lights.cpp  Lights.h  Material.cpp  Material.h  Shape.cpp  Shape.h  TestScene.cpp  TestScene.h  Textures.cpp  Textures.h
src/Scene/Geometry/private/: Cylinder.cpp  Cylinder.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Utils/: filetostring.h  hdrloader.cpp  hdrloader.h  tiny_obj_loader.h
src/bvh/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  TreeObject.h
src/imgui/: imconfig.h  imguiVars.cpp
